# StickyNotes

./: AUTHORS  Makefile.am  README  README.md  configure.ac  e-module-sticky_notes.edc  e_modules-sticky_notes.spec.in  meson.build  module.desktop  module.desktop.in
po/: LINGUAS  ar.po  ar.po~  be.po  bg.po  bg.po~  cs.po  cs.po~  de.po  de.po~  el.po  el.po~  eo.po  eo.po~  es.po  es.po~  fr.po  fr.po~  gl.po  gl.po~  he.po  he.po~  hi.po  hr.po  hr.po~  hu.po  hu.po~  it.po  ja.po  ja.po~  lt.po  lt.po~  ml.po  nl.po  nl.po~  pl.po  pl.po~  pt.po  pt.po~  pt_BR.po  (+17 more)
src/: e_mod_config.c  e_mod_main.c  e_mod_main.h  meson.build
